2.3/traefik_2.3_ingreeeRoute/ingressRoute_dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/traefik`)
    kind: Rule
    services:
    - name: traefik
      port: 8080


# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-tls
#   namespace: default
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: PathPrefix(`/traefik`)
#     kind: Rule
#     services:
#     - name: traefik
#       port: admin
#   tls:
#     certResolver: myresolver
